# py-order-management

./: .gitignore  README.md  env.example  postman_collection.json  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  health.py  orders.py
app/cache/: redis_client.py
app/core/: auth.py  config.py  database.py  security.py
app/dto/requests/: auth_request.py  order_request.py
app/dto/responses/: auth_response.py  order_response.py
app/events/: base.py  event_bus.py  order_events.py
app/events/handlers/: cache_handler.py  history_handler.py
app/models/: order_header.py
app/services/: auth_service.py  order_service.py
app/tests/: conftest.py  test_api_endpoints.py  test_auth_service.py  test_event_bus.py  test_health.py  test_order_service.py  test_security.py
devops/local/: .env.example  Dockerfile  docker-compose.yml  start.sh
documentation/: api.md  features.md  infrastructure.md
prisma/: schema.prisma
